--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,4 +12,11 @@ services:
       - 80:80
       - 443:443
     restart: unless-stopped
-  
+
+    services:
+  excalidraw:
+    container_name: excalidraw
+    image: excalidraw/excalidraw:latest
+    ports:
+      - "3030:80"
+    restart: on-failure
