--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,12 +9,26 @@ services:
     volumes:
       - ./config:/config
     ports:
-      - 80:80
+      - 80:81
       - 443:443
     restart: unless-stopped
+
   excalidraw:
     container_name: excalidraw
     image: excalidraw/excalidraw:latest
     ports:
       - "3030:80"
     restart: on-failure
+  apache:
+    image: httpd:2.4-alpine
+    container_name: apache
+    ports:
+      - 80:80
+    volumes:
+      - ./public:/usr/local/apache2/htdocs:ro
+    restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "wget", "-qO-", "http://localhost/ || exit 1"]
+      interval: 10s
+      timeout: 3s
+      retries: 5
