--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -58,7 +58,25 @@ services:
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       - portainer_data:/data
-      
+# Duplicati
+  duplicati:
+    image: lscr.io/linuxserver/duplicati:latest
+    container_name: duplicati
+    environment:
+      - PUID=1000
+      - PGID=1000
+      - TZ=Europe/Madrid
+      - SETTINGS_ENCRYPTION_KEY=pon_algo_aquí
+      - CLI_ARGS= #optional
+      - DUPLICATI__WEBSERVICE_PASSWORD=2SMAzornotza
+    volumes:
+      - ./duplicati:/config
+      - ./micarpetasegura:/soruce/micarpetasegura
+
+    ports:
+      - 8200:8200
+    restart: unless-stopped    
 volumes:
   code_config:
   portainer_data:
+
